Create new controller to get conv..